// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`resolveTypeDescriptors should resolve descriptors for case-0.tact 1`] = `
{
  "Bool": {
    "fields": [],
    "functions": [],
    "init": null,
    "kind": "primitive",
    "name": "Bool",
  },
  "Int": {
    "fields": [],
    "functions": [],
    "init": null,
    "kind": "primitive",
    "name": "Int",
  },
}
`;

exports[`resolveTypeDescriptors should resolve descriptors for case-0.tact 2`] = `{}`;

exports[`resolveTypeDescriptors should resolve descriptors for case-1.tact 1`] = `
{
  "Bool": {
    "fields": [],
    "functions": [],
    "init": null,
    "kind": "primitive",
    "name": "Bool",
  },
  "Int": {
    "fields": [],
    "functions": [],
    "init": null,
    "kind": "primitive",
    "name": "Int",
  },
  "Struct1": {
    "fields": [
      {
        "as": null,
        "index": 0,
        "name": "a",
        "type": {
          "kind": "direct",
          "name": "Int",
        },
      },
      {
        "as": null,
        "index": 1,
        "name": "b",
        "type": {
          "kind": "direct",
          "name": "Bool",
        },
      },
    ],
    "functions": [],
    "init": null,
    "kind": "struct",
    "name": "Struct1",
  },
  "Struct2": {
    "fields": [
      {
        "as": null,
        "index": 0,
        "name": "a",
        "type": {
          "kind": "direct",
          "name": "Struct1",
        },
      },
    ],
    "functions": [],
    "init": null,
    "kind": "struct",
    "name": "Struct2",
  },
}
`;

exports[`resolveTypeDescriptors should resolve descriptors for case-1.tact 2`] = `{}`;

exports[`resolveTypeDescriptors should resolve descriptors for case-2.tact 1`] = `
{
  "Bool": {
    "fields": [],
    "functions": [],
    "init": null,
    "kind": "primitive",
    "name": "Bool",
  },
  "Int": {
    "fields": [],
    "functions": [],
    "init": null,
    "kind": "primitive",
    "name": "Int",
  },
}
`;

exports[`resolveTypeDescriptors should resolve descriptors for case-2.tact 2`] = `
{
  "testFunc": {
    "args": [],
    "ast": {
      "args": [],
      "attribute": [],
      "id": 20,
      "kind": "def_function",
      "name": "testFunc",
      "ref": fun testFunc(): Int {
    return 0;
},
      "return": {
        "id": 17,
        "kind": "type_ref",
        "name": "Int",
        "optional": false,
        "ref": Int,
      },
      "statements": [
        {
          "expression": {
            "id": 18,
            "kind": "number",
            "ref": 0,
            "value": 0n,
          },
          "id": 19,
          "kind": "statement_return",
          "ref": return 0;,
        },
      ],
    },
    "isGetter": false,
    "isPublic": false,
    "name": "testFunc",
    "returns": {
      "kind": "direct",
      "name": "Int",
    },
    "self": null,
  },
  "testFunc2": {
    "args": [],
    "ast": {
      "args": [],
      "attribute": [],
      "id": 23,
      "kind": "def_function",
      "name": "testFunc2",
      "ref": fun testFunc2() {
    return 0;
},
      "return": null,
      "statements": [
        {
          "expression": {
            "id": 21,
            "kind": "number",
            "ref": 0,
            "value": 0n,
          },
          "id": 22,
          "kind": "statement_return",
          "ref": return 0;,
        },
      ],
    },
    "isGetter": false,
    "isPublic": false,
    "name": "testFunc2",
    "returns": null,
    "self": null,
  },
  "testFunc3": {
    "args": [
      {
        "as": null,
        "name": "a",
        "type": {
          "kind": "direct",
          "name": "Int",
        },
      },
      {
        "as": null,
        "name": "b",
        "type": {
          "kind": "direct",
          "name": "Bool",
        },
      },
    ],
    "ast": {
      "args": [
        {
          "id": 25,
          "kind": "def_argument",
          "name": "a",
          "ref": a: Int,
          "type": {
            "id": 24,
            "kind": "type_ref",
            "name": "Int",
            "optional": false,
            "ref": Int,
          },
        },
        {
          "id": 27,
          "kind": "def_argument",
          "name": "b",
          "ref": b: Bool,
          "type": {
            "id": 26,
            "kind": "type_ref",
            "name": "Bool",
            "optional": false,
            "ref": Bool,
          },
        },
      ],
      "attribute": [],
      "id": 30,
      "kind": "def_function",
      "name": "testFunc3",
      "ref": fun testFunc3(a: Int, b: Bool) {
    return 0;
},
      "return": null,
      "statements": [
        {
          "expression": {
            "id": 28,
            "kind": "number",
            "ref": 0,
            "value": 0n,
          },
          "id": 29,
          "kind": "statement_return",
          "ref": return 0;,
        },
      ],
    },
    "isGetter": false,
    "isPublic": false,
    "name": "testFunc3",
    "returns": null,
    "self": null,
  },
}
`;

exports[`resolveTypeDescriptors should resolve descriptors for case-3.tact 1`] = `
{
  "Bool": {
    "fields": [],
    "functions": [],
    "init": null,
    "kind": "primitive",
    "name": "Bool",
  },
  "HelloWorld": {
    "fields": [
      {
        "as": null,
        "index": 0,
        "name": "a",
        "type": {
          "kind": "direct",
          "name": "Int",
        },
      },
      {
        "as": null,
        "index": 1,
        "name": "b",
        "type": {
          "kind": "direct",
          "name": "Bool",
        },
      },
    ],
    "functions": [
      {
        "args": [],
        "ast": {
          "args": [],
          "attribute": [],
          "id": 38,
          "kind": "def_function",
          "name": "hello",
          "ref": fun hello() {
        
    },
          "return": null,
          "statements": [],
        },
        "isGetter": false,
        "isPublic": false,
        "name": "hello",
        "returns": null,
        "self": [Circular],
      },
      {
        "args": [],
        "ast": {
          "args": [],
          "attribute": [],
          "id": 39,
          "kind": "def_function",
          "name": "hello2",
          "ref": fun hello2() {
        
    },
          "return": null,
          "statements": [],
        },
        "isGetter": false,
        "isPublic": false,
        "name": "hello2",
        "returns": null,
        "self": [Circular],
      },
    ],
    "init": null,
    "kind": "contract",
    "name": "HelloWorld",
  },
  "Int": {
    "fields": [],
    "functions": [],
    "init": null,
    "kind": "primitive",
    "name": "Int",
  },
}
`;

exports[`resolveTypeDescriptors should resolve descriptors for case-3.tact 2`] = `{}`;
